feat(auth): add sign and signout
