# server/controller/authController.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	_ "api/docs"
+	"api/dto"
 	"api/model"
 	"api/service"
 	"net/http"
@@ -24,7 +25,6 @@ type AuthController struct {
 func (ac *AuthController) SignUp(ctx *gin.Context) {
 
 	var body model.User
-
 	if ctx.Bind(&body) != nil {
 		ctx.JSON(400, gin.H{"error": "Invalid request"})
 		return
@@ -32,12 +32,52 @@ func (ac *AuthController) SignUp(ctx *gin.Context) {
 
 	user := ac.AuthService.SignUp(body)
 
-	ctx.Header("Content-Type", "application/json")
 	ctx.JSON(http.StatusOK, user)
+
 }
 
+// SignIn godoc
+// @Summary Sign in
+// @Description Sign in a user
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Success 200
+// @Failure 401 {string} string "Invalid password"
+// @Failure 404 {string} string "User not found"
+// @Failure 500 {string} string "Server error"
+// @Router /signin [post]
 func (ac *AuthController) SignIn(ctx *gin.Context) {
 
-	//var body
+	var body dto.SignInDto
+	if ctx.Bind(&body) != nil {
+		ctx.JSON(400, gin.H{"error": "Invalid request"})
+		return
+	}
+
+	token, error := ac.AuthService.SignIn(body)
+	if error != (dto.HttpErrorDto{}) {
+		ctx.JSON(error.Code, gin.H{"error": error.Message})
+		return
+	}
+
+	ctx.SetSameSite(http.SameSiteLaxMode)
+	ctx.SetCookie("Authorization", token, 3600*24*30, "", "", false, true)
+	ctx.JSON(http.StatusOK, gin.H{})
+
+}
+
+// SignOut godoc
+// @Summary Sign out
+// @Description Sign out a user
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Success 204
+// @Router /signout [delete]
+func (ac *AuthController) SignOut(ctx *gin.Context) {
+
+	ctx.SetCookie("Authorization", "", -1, "", "", false, true)
+	ctx.JSON(http.StatusNoContent, gin.H{})
 
 }
